modelio/app/app.api.impl.ext_org/#	modified:   modelio/app/app.project.ui.ext_org/src/org/modelio/app/project/ui/views/workspace/handlers/WksCommandVisibilityTester.java